--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ relative_permalinks: true
 # Setup
 title:               Poole
 tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+url:                 http://jefworks.github.io/scw2015
 paginate:            1
 baseurl:             ""
 
@@ -20,14 +20,14 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jean Fan
+  url:               https://jef.works
+  email:             jeanfan@fas.harvard.edu
 
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/poole/poole
+  repo:              https://github.com/JEFworks/scw2015
 
 
 # Conversion
