--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/hms-dbmi/scw/scw2015
+  repo:              https://github.com/hms-dbmi/scw
 
 
 # Conversion
