--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 # Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-relative_permalinks: true
+permalink:           none
 
 # Setup
 title:               Single Cell Workshop
