--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github:
 
 
 # Conversion
-markdown:         redcarpet
+markdown:         kramdown
 redcarpet:
   extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks",
       "autolink", "strikethrough", "superscript", "with_toc_data", "html_toc"]
