--- a/_config.yml
+++ b/_config.yml
@@ -30,4 +30,4 @@ markdown:         kramdown
 redcarpet:
   extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks",
       "autolink", "strikethrough", "superscript", "with_toc_data", "html_toc"]
-highlighter:      pygments
+highlighter:      rouge
